<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical"
    android:windowSoftInputMode="stateHidden">

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:background="@color/white"
        android:paddingBottom="@dimen/space20"
        android:paddingTop="@dimen/space20">

        <com.kpi.money.views.TextView_Lato
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructions"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/trans_text_black"
            android:layout_marginLeft="@dimen/space20"
            android:layout_marginStart="@dimen/space20"
            android:layout_gravity="center"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/guide_image"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_guide" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/guide_image"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/entry_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/instructions_content"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space15"
                android:layout_marginTop="@dimen/space1"
                android:layout_marginRight="@dimen/space15"
                android:layout_marginBottom="@dimen/space1"
                android:autoLink="web"
                android:fontFamily="sans-serif-black"
                android:lineSpacingMultiplier="1.3"
                android:text="@string/text1" />

            <TextView
                android:id="@+id/instructions_content2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space15"
                android:layout_marginTop="@dimen/space5"
                android:layout_marginRight="@dimen/space15"
                android:layout_marginBottom="@dimen/space15"
                android:autoLink="web"
                android:lineSpacingMultiplier="1.3"
                android:text="@string/text2" />

            <TextView
                android:id="@+id/instructions_content3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space15"
                android:layout_marginTop="@dimen/space1"
                android:layout_marginRight="@dimen/space15"
                android:layout_marginBottom="@dimen/space1"
                android:autoLink="web"
                android:fontFamily="sans-serif-black"
                android:lineSpacingMultiplier="1.3"
                android:text="@string/text3" />

            <TextView
                android:id="@+id/instructions_content4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space15"
                android:layout_marginTop="@dimen/space5"
                android:layout_marginRight="@dimen/space15"
                android:layout_marginBottom="@dimen/space15"
                android:autoLink="web"
                android:lineSpacingMultiplier="1.3"
                android:text="@string/text4" />

            <TextView
                android:id="@+id/instructions_content5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space15"
                android:layout_marginTop="@dimen/space1"
                android:layout_marginRight="@dimen/space15"
                android:layout_marginBottom="@dimen/space1"
                android:autoLink="web"
                android:fontFamily="sans-serif-black"
                android:lineSpacingMultiplier="1.3"
                android:text="@string/text5" />

            <TextView
                android:id="@+id/instructions_content6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space15"
                android:layout_marginTop="@dimen/space5"
                android:layout_marginRight="@dimen/space15"
                android:layout_marginBottom="@dimen/space15"
                android:autoLink="web"
                android:lineSpacingMultiplier="1.3"
                android:text="@string/text6" />

            <TextView
                android:id="@+id/instructions_content7"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space15"
                android:layout_marginTop="@dimen/space1"
                android:layout_marginRight="@dimen/space15"
                android:layout_marginBottom="@dimen/space1"
                android:autoLink="web"
                android:fontFamily="sans-serif-black"
                android:lineSpacingMultiplier="1.3"
                android:text="@string/text7" />

            <TextView
                android:id="@+id/instructions_content8"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space15"
                android:layout_marginTop="@dimen/space5"
                android:layout_marginRight="@dimen/space15"
                android:layout_marginBottom="@dimen/space1"
                android:autoLink="web"
                android:lineSpacingMultiplier="1.3"
                android:text="@string/text8" />

            <TextView
                android:id="@+id/instructions_content9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space15"
                android:layout_marginTop="@dimen/space1"
                android:layout_marginRight="@dimen/space1"
                android:layout_marginBottom="@dimen/space1"
                android:autoLink="web"
                android:fontFamily="sans-serif-black"
                android:lineSpacingMultiplier="1.3"
                android:text="@string/text9"
                android:textColor="@color/grey_600"
                android:textSize="12sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/instructions_content10"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space15"
                android:layout_marginTop="@dimen/space0"
                android:layout_marginRight="@dimen/space15"
                android:layout_marginBottom="@dimen/space1"
                android:autoLink="web"
                android:textSize="12sp"
                android:lineSpacingMultiplier="1.3"
                android:text="@string/text10" />
            <TextView
                android:id="@+id/instructions_content11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space15"
                android:layout_marginTop="@dimen/space1"
                android:layout_marginRight="@dimen/space1"
                android:layout_marginBottom="@dimen/space1"
                android:autoLink="web"
                android:fontFamily="sans-serif-black"
                android:lineSpacingMultiplier="1.3"
                android:text="@string/text11"
                android:textColor="@color/grey_600"
                android:textSize="12sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/instructions_content13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space15"
                android:layout_marginTop="@dimen/space1"
                android:layout_marginRight="@dimen/space1"
                android:layout_marginBottom="@dimen/space1"
                android:autoLink="web"
                android:fontFamily="sans-serif-black"
                android:lineSpacingMultiplier="1.3"
                android:text="@string/text12"
                android:textColor="@color/grey_600"
                android:textSize="12sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/instructions_content14"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space15"
                android:layout_marginTop="@dimen/space0"
                android:layout_marginRight="@dimen/space15"
                android:layout_marginBottom="@dimen/space1"
                android:autoLink="web"
                android:textSize="12sp"
                android:lineSpacingMultiplier="1.3"
                android:text="@string/text13" />
            <TextView
                android:id="@+id/instructions_content15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space15"
                android:layout_marginTop="@dimen/space1"
                android:layout_marginRight="@dimen/space1"
                android:layout_marginBottom="@dimen/space1"
                android:autoLink="web"
                android:fontFamily="sans-serif-black"
                android:lineSpacingMultiplier="1.3"
                android:text="@string/text14"
                android:textColor="@color/grey_600"
                android:textSize="12sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/instructions_content16"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space15"
                android:layout_marginTop="@dimen/space0"
                android:layout_marginRight="@dimen/space15"
                android:layout_marginBottom="@dimen/space1"
                android:autoLink="web"
                android:textSize="12sp"
                android:lineSpacingMultiplier="1.3"
                android:text="@string/text15" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>